test/negative/110_extra_comma.err
110_extra_comma.fx:2:16: error: extra ','?
 2 | val a = [1, 2, , 3]
   |                ^
